# mpn-rl

./: README.md  check  check_reward_timing.py  compare_models.py  envs.py  generate_table_images.py  main_a2c.py  model_utils.py  mpn_module.py  mpn_torchrl_module.py  oracle_agents.py  plot_custom_sweep_bar.py  plot_custom_sweep_curves.py  plot_episode_rewards.py  plot_eval_table.py  plot_id_lstm_fb.py  plot_id_mpn_curve.py  plot_layer_heatmap.py  plot_trial_appendix.py  plot_trial_lengths.py  plot_trial_lengths_all_envs.py  plot_trial_lengths_per_task.py  pyproject.toml  query_experiments.py  rnn_module.py  setup.sh  temporal_order_env.py  test_all_envs.py  visualize_mpn_m_matrix.py
commands/: eval.py  render.py  train.py
condor/scripts/: run_experiment.sh
models/: actor_critic.py
plots/: plot_custom_sweep_bar.py  plot_custom_sweep_curves.py  plot_episode_rewards.py  plot_eval_table.py  plot_id_lstm_fb.py  plot_id_mpn_curve.py  plot_layer_heatmap.py  plot_trial_appendix.py  plot_trial_lengths.py  plot_trial_lengths_all_envs.py  plot_trial_lengths_per_task.py  visualize_mpn_m_matrix.py
src/mpn_rl/: __init__.py  device.py  envs.py  evaluation.py  experiment.py  experiment_test.py  git.py  model_utils.py  model_utils_test.py  neurogym_wrapper.py  oracle_agents.py  runs.py  runs_test.py  seeding.py  supervised_data.py  supervised_data_test.py  sweep.py  sweep_test.py  temporal_order_env.py
src/mpn_rl/commands/: eval.py  render.py  start_sweep.py  train.py  train_test.py
src/mpn_rl/models/: __init__.py  actor_critic.py  actor_critic_test.py  supervised.py
src/mpn_rl/nn/: __init__.py  mpn.py  recurrent_core.py
sweeps/: neurogym_a2c.yaml  neurogym_a2c_random_input_proj_ablation.yaml  neurogym_supervised_mpn.yaml
sweeps/validation/: README.md  coverage_seed_42.yaml  coverage_seed_43.yaml
