[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mpn-rl"
version = "0.1.0"
description = "Multi-Plasticity Networks for Reinforcement Learning"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "gymnasium>=0.29.0",
    "neurogym",
    "tqdm",
    "wandb",
    "tensordict>=0.2.0",
    "torchrl",
]

[tool.setuptools]
py-modules = [
    "main_a2c",
    "mpn_module",
    "mpn_torchrl_module",
    "rnn_module",
    "model_utils",
    "oracle_agents",
    "temporal_order_env",
    "neurogym_wrapper",
    "query_experiments",
    "compare_models",
    "check_reward_timing",
    "visualize_mpn_m_matrix",
    "generate_table_images",
    "test_all_envs",
    "plot_custom_sweep_bar",
    "plot_custom_sweep_curves",
    "plot_episode_rewards",
    "plot_eval_table",
    "plot_id_lstm_fb",
    "plot_id_mpn_curve",
    "plot_layer_heatmap",
    "plot_trial_appendix",
    "plot_trial_lengths",
    "plot_trial_lengths_all_envs",
    "plot_trial_lengths_per_task",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "isort>=6.1.0",
    "mypy>=1.19.1",
    "pytest>=8.4.2",
]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "check_reward_timing.py",
    "compare_models.py",
    "generate_table_images.py",
    "main_a2c.py",
    "model_utils.py",
    "mpn_module.py",
    "mpn_torchrl_module.py",
    "neurogym_wrapper.py",
    "oracle_agents.py",
    "plot_custom_sweep_bar.py",
    "plot_custom_sweep_curves.py",
    "plot_episode_rewards.py",
    "plot_eval_table.py",
    "plot_id_mpn_curve.py",
    "plot_layer_heatmap.py",
    "plot_trial_appendix.py",
    "plot_trial_lengths.py",
    "plot_trial_lengths_all_envs.py",
    "plot_trial_lengths_per_task.py",
    "query_experiments.py",
    "rnn_module.py",
    "temporal_order_env.py",
    "test_all_envs.py",
    "visualize_mpn_m_matrix.py",
]

