[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mpn-rl"
version = "0.1.0"
description = "Multi-Plasticity Networks for Reinforcement Learning"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "gymnasium>=0.29.0",
    "neurogym",
    "tqdm",
    "wandb",
    "tensordict>=0.2.0",
    "torchrl",
]

[tool.setuptools]
py-modules = [
    "main_a2c",
    "mpn_module",
    "mpn_torchrl_module",
    "rnn_module",
    "model_utils",
    "oracle_agents",
    "temporal_order_env",
    "neurogym_wrapper",
    "query_experiments",
    "compare_models",
    "check_reward_timing",
    "test_all_envs",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.19.1",
    "pytest>=8.4.2",
]

[tool.ruff]
target-version = "py313"
extend-exclude = [".uv-cache"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Ignore line length. Let the formatter handle it.

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
# These scripts call warnings.filterwarnings(...) before importing, so imports
# legitimately follow code (E402).
"check_reward_timing.py" = ["E402"]
"plots/plot_trial_lengths*.py" = ["E402"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = [
    '^\.uv-cache/',
    '^\.venv/',
    'check_reward_timing.py',
    'compare_models.py',
    'main_a2c.py',
    'model_utils.py',
    'mpn_module.py',
    'mpn_torchrl_module.py',
    'neurogym_wrapper.py',
    'oracle_agents.py',
    'plots/generate_table_images.py',
    'plots/plot_custom_sweep_bar.py',
    'plots/plot_custom_sweep_curves.py',
    'plots/plot_episode_rewards.py',
    'plots/plot_eval_table.py',
    'plots/plot_id_mpn_curve.py',
    'plots/plot_layer_heatmap.py',
    'plots/plot_trial_appendix.py',
    'plots/plot_trial_lengths.py',
    'plots/plot_trial_lengths_all_envs.py',
    'plots/plot_trial_lengths_per_task.py',
    'plots/visualize_mpn_m_matrix.py',
    'query_experiments.py',
    'rnn_module.py',
    'temporal_order_env.py',
    'test_all_envs.py',
]

