[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mpn-rl"
version = "0.1.0"
description = "Multi-Plasticity Networks for Reinforcement Learning"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "gymnasium>=0.29.0",
    "neurogym",
    "tqdm",
    "wandb",
    "duckdb>=1.4.5",
    "imageio>=2.37.2",
    "pandas>=2.3.3",
    "tyro>=1.0.15",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "uuid6>=2025.0.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.19.1",
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
testpaths = ["src"]
python_files = ["*_test.py"]

# Pin torch to a CUDA 12.x build. The PyPI default is +cu130 (CUDA 13), which
# only runs on the pool's 13.x-driver GPU nodes (the RTX 4090s); a cu126 build
# runs on every GPU node — 12.4 nodes via CUDA minor-version forward-compat and
# 13.x nodes via backward driver compat.
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }

[tool.ruff]
target-version = "py313"
extend-exclude = [".uv-cache"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Ignore line length. Let the formatter handle it.

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
# These scripts call warnings.filterwarnings(...) before importing, so imports
# legitimately follow code (E402).
"check_reward_timing.py" = ["E402"]
"plots/plot_trial_lengths*.py" = ["E402"]

[tool.black]
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = [
    '^\.uv-cache/',
    '^\.venv/',
    '^src/mpn_rl/commands/',
    'check_reward_timing.py',
    'compare_models.py',
    'main_a2c.py',
    'plots/generate_table_images.py',
    'plots/plot_custom_sweep_bar.py',
    'plots/plot_custom_sweep_curves.py',
    'plots/plot_episode_rewards.py',
    'plots/plot_eval_table.py',
    'plots/plot_id_mpn_curve.py',
    'plots/plot_layer_heatmap.py',
    'plots/plot_trial_appendix.py',
    'plots/plot_trial_lengths.py',
    'plots/plot_trial_lengths_all_envs.py',
    'plots/plot_trial_lengths_per_task.py',
    'plots/visualize_mpn_m_matrix.py',
    'query_experiments.py',
    'src/mpn_rl/envs.py',
    'src/mpn_rl/evaluation.py',
    'src/mpn_rl/models/actor_critic.py',
    'src/mpn_rl/neurogym_wrapper.py',
    'src/mpn_rl/nn/mpn.py',
    'src/mpn_rl/oracle_agents.py',
    'src/mpn_rl/temporal_order_env.py',
    'test_all_envs.py',
]

